finishing the challenge

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 #####################################################
 *.sketch
 *.fig
+*.README-template.md
+design
+
 
 # Avoid accidental XD upload if you convert the design file
 ###############################################
